[OPLU-188] Handle invalid import (#58)
Return only successfully processed projects in the /projects endpoint and include the information about import errors in ProjectSerializer.
